# src/models/auth.sql.js
@@ -4,3 +4,5 @@ export const getUserByIDSql = 'SELECT user_id, user_nickname, access_at FROM use
 export const updateAccessTime = 'UPDATE user SET access_at = CURRENT_TIMESTAMP() WHERE user_id = ?';
 
 export const getEmailByName = 'SELECT user_email FROM user WHERE user_name = ?';
+
+export const getUser = 'UPDATE user SET user_password = ? WHERE user_email = ? AND user_name = ?'
